# Aegis

./: .env.example  .gitignore  Dockerfile  Stan.md  docker-compose.separate.yml  docker-compose.yml  flake.nix
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  db.py  llm_provider.py  llm_summariser.py  main.py  models.py  settings.py
backend/app/data/: 23andme_pp.txt
backend/app/routers/: accounts.py  agreements.py  auth.py  questions.py  summary.py  users.py
chrome-extension/: .gitignore  config.js  manifest.json  popup-router.html  popup-router.js
chrome-extension/active-detection/: detect-policy.js
chrome-extension/background/: cookie-manager.js  index.js  policy-pipeline.js
chrome-extension/interface/: interface.css  interface.html  interface.js
chrome-extension/onboarding/: onboarding.css  onboarding.html  onboarding.js
chrome-extension/summary-popup/: policy-summary.css  policy-summary.html  policy-summary.js
chrome-extension/utils/: api-client.js  storage.js
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  mdx-components.tsx
frontend/src/components/: Header.tsx  LocalAuth.tsx
frontend/src/config/: docs.ts  env.ts
frontend/src/dashboard/: Dashboard.tsx
frontend/src/docs/: Docs.tsx
frontend/src/hooks/: useLinkedServices.ts  usePreferences.ts  useScrollDirection.ts  useTheme.ts  useUser.ts
frontend/src/landing/: page.tsx
frontend/src/onboarding/: OnboardingSurvey.tsx  surveyQuestions.ts
frontend/src/pages/: Docs.tsx  Home.tsx
(+14 files in other folders)
